--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body {
   color: #ffffff;
 }
 
+button {
+  cursor: pointer;
+}
+
 .navbar {
   display: flex;
   flex-direction: row;
@@ -46,7 +50,8 @@ body {
 .list-item {
   list-style-type: none;
   font-size: 14px;
-  padding: 0 30px;
+  margin: 0 30px;
+  cursor: pointer;
 }
 
 .list-item:first-child {
@@ -62,13 +67,21 @@ body {
 }
 
 .button-small {
-  margin-left: 450px;
+  position: fixed;
+  right: 5%;
+  top: 3%;
   font-family: "Montserrat", sans-serif;
   background-color: var(--pink);
   color: #ffffff;
   padding: 10px 20px;
   border-radius: 5px;
   border: none;
+}
+
+.menu-icon {
+  display: none;
+  height: 32px;
+  cursor: pointer;
 }
 
 .hero {
@@ -95,4 +108,67 @@ body {
   border-radius: 5px;
   border: none;
   font-size: 20px;
+}
+
+@media screen and (max-width: 1199px) {
+  .navbar {
+    padding: 15px 30px;
+  }
+  .hero {
+    padding: 10%;
+  }
+}
+
+@media only screen and (max-width: 991px) {
+  .grow-list,
+  .line {
+    display: none;
+  }
+  .menu-icon {
+    display: inline-block;
+    position: fixed;
+    top: 2%;
+    right: 2%;
+  }
+  .button-small {
+    right: 8%;
+    top: 2%;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .navbar {
+    padding: 20px;
+  }
+  .hero {
+    padding: 10% 5%;
+  }
+  .hero-heading {
+    margin-top: 40px;
+    font-size: 54px;
+  }
+  .hero-description {
+    font-size: 22px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .button-small {
+    display: none;
+  }
+  .menu-icon {
+    right: 4%;
+  }
+  .hero-heading {
+    margin-top: 40px;
+    font-size: 44px;
+  }
+  .hero-description {
+    font-size: 20px;
+  }
+  .button-large {
+    margin-top: 30px;
+    padding: 15px;
+    font-size: 18px;
+  }
 }
